objects/agf__ADM_Work_Commitment__c.object
<CustomObject>
    <description>Work items committed to in a sprint</description>
    <fields>
        <fullName>agf__Committed_Story_Points__c</fullName>
        <description>Number of story points assigned to work item when it was committed to in this sprint</description>
        <inlineHelpText>Number of story points assigned to work item when it was committed to in this sprint</inlineHelpText>
        <label>Committed Story Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>agf__ADM_Sprint__c</referenceTo>
        <relationshipLabel>Work Commitments</relationshipLabel>
        <relationshipName>Work_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Work Commitments</relationshipLabel>
        <relationshipName>Work_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Commitment</label>
    <nameField>
        <displayFormat>WC-{0000000}</displayFormat>
        <label>Work Commitment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>